--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.1.1",
     "bootstrap": "^5.3.7",
     "react": "^18.3.1",
